tests/ui/parser/suggest-static-for-global-var-mut.stderr
error: expected item, found keyword `let`
  --> $DIR/suggest-static-for-global-var-mut.rs:1:1
   |
LL | let mut _data = vec![1,2,3];
   | ^^^ `let` cannot be used for global variables
   |
   = help: consider using `static` and a `Mutex` instead of `let mut`
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

