tests/ui/parser/suggest-static-for-global-var-mut.rs
let mut _data = vec![1,2,3];
//~^ ERROR expected item, found keyword `let`

fn main() {
}
